--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -9,13 +9,28 @@
     background-color: rgb(16, 16, 65);
     color: white;
     border: 5px solid rgba(0, 0, 0, .125);
-    border-radius: 100px;
+    border-radius: 35px;
     left: 38%;
     margin-top: 15%;
     padding: 30px;
+    font-weight: bolder;
+    font-family: Copperplate, Papyrus, fantasy;
 }
 
 .bt1 {
     margin: 5px;
-    border-radius: 150px;
+    border-radius: 9px;
+    color: black;
+    font-weight: bolder;
+    font-family: Copperplate, Papyrus, fantasy;
+    background-color: white
+}
+
+.container .input-box input[type="submit"] {
+    background: linear-gradient(to right, rgb(42, 42, 94) 0%, rgb(54, 54, 80) 100%);
+    font-size: 17px;
+    color: #fff;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 0.3s ease;
 }
