--- a/src/app/nav-menu/nav-menu.component.html
+++ b/src/app/nav-menu/nav-menu.component.html
@@ -13,13 +13,13 @@
       >
         <span class="navbar-toggler-icon"></span>
       </button> -->
-            <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end" [ngClass]="{ show: isExpanded }">
+            <div (icondata)="getNotification($event)" class="navbar-collapse collapse d-sm-inline-flex justify-content-end" [ngClass]="{ show: isExpanded }">
                 <ul class="navbar-nav flex-grow">
                     <li class="nav-item" [routerLinkActive]="['link-active']" [routerLinkActiveOptions]="{ exact: true }">
                         <a class="nav-link text-dark" [routerLink]="['/']"><i class="bi bi-house"></i></a>
                     </li>
 
-                    <li class="nav-item" [routerLinkActive]="['link-active']">
+                    <li *ngIf=logOutEnable class="nav-item" [routerLinkActive]="['link-active']">
                         <a class="nav-link text-dark" [routerLink]="['/logout']"><i class="bi bi-box-arrow-right"></i></a>
                     </li>
                     <li *ngIf="true" class="nav-item" [routerLinkActive]="['link-active']">
