--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -28,7 +28,7 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
 </table> -->
-<mat-progress-bar mode="buffer"></mat-progress-bar>
+<!-- <mat-progress-bar mode="buffer"></mat-progress-bar>
 <mat-drawer-container class="example-container" autosize>
     <mat-drawer #drawer class="example-sidenav" mode="side">
         <p>Auto-resizing sidenav</p>
@@ -37,6 +37,7 @@
         <button (click)="showFiller = !showFiller" mat-raised-button>
         Toggle extra text
       </button>
+
     </mat-drawer>
 
     <div class="example-sidenav-content">
@@ -45,4 +46,6 @@
       </button>
     </div>
 
-</mat-drawer-container>
+</mat-drawer-container> -->
+
+<div>Welcome to Dashboard</div>
