--- a/src/app/counter/counter.component.html
+++ b/src/app/counter/counter.component.html
@@ -1,28 +1,26 @@
-<div class="container">
-    <div class="card">
-        <!-- <img src="https://lh3.googleusercontent.com/ytP9VP86DItizVX2YNA-xTYzV09IS7rh4WexVp7eilIcfHmm74B7odbcwD5DTXmL0PF42i2wnRKSFPBHlmSjCblWHDCD2oD1oaM1CGFcSd48VBKJfsCi4bS170PKxGwji8CPmehwPw=w200-h247-no" alt="Person" class="card__image"> -->
-        <p class="card__name">Lily-Grace Colley</p>
-        <div class="grid-container">
-
-            <div class="grid-child-posts">
-                156 Post
-            </div>
-
-            <div class="grid-child-followers">
-                1012 Likes
-            </div>
-
+<!-- <div class="container">
+    <div class="profileCard">
+        <div class="row">
+            <div class="col-md-6">First name</div>
+            <div class="col-md-6"></div>
+            {{firstName}} {{lastName}} {{mailId}} {{phoneNumber}}
         </div>
-        <ul class="social-icons">
-            <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-            <li><a href="#"><i class="fa fa-codepen"></i></a></li>
-        </ul>
-        <button class="btn draw-border">Follow</button>
-        <button class="btn draw-border">Message</button>
 
     </div>
 
 
+</div> -->
+<div class="card">
+    <!-- <img src="" alt="John" style="width:100%"> -->
+    <div class="close" (click)="back()"><i class="close bi bi-x-square-fill"></i></div>
+    <h1>{{lastName}} {{firstName}}</h1>
+    <p class="title">{{mailId}}</p>
+    <p>{{phoneNumber}}</p>
+    <div style="margin: 20px 0;">
+        <a><i class="fa fa-dribbble"></i></a>
+        <a><i class="fa fa-twitter"></i></a>
+        <a><i class="fa fa-linkedin"></i></a>
+        <a><i class="fa fa-facebook"></i></a>
+    </div>
+    <p><button>Edit Profile <i class="bi bi-pencil-square"></i></button></p>
 </div>
