--- a/src/app/nav-menu/nav-menu.component.html
+++ b/src/app/nav-menu/nav-menu.component.html
@@ -23,7 +23,7 @@
                         <a class="nav-link text-dark" [routerLink]="['/logout']"><i class="bi bi-box-arrow-right"></i></a>
                     </li>
                     <li *ngIf="profileIcon" class="nav-item" [routerLinkActive]="['link-active']">
-                        <a class="nav-link text-dark" [routerLink]="['/counter']">
+                        <a class="nav-link text-dark" [routerLink]="['/profile']">
                             <div id="profileImage">{{profile}}</div>
                         </a>
                     </li>
