--- a/src/app/counter/counter.component.css
+++ b/src/app/counter/counter.component.css
@@ -1,20 +1,55 @@
 .card {
-    background-color: #222831;
-    height: 37rem;
-    border-radius: 5px;
-    width: 25% !important;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    box-shadow: rgba(0, 0, 0, 0.7);
-    color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    min-width: 18%;
+    max-width: 300px;
+    margin: auto;
+    text-align: center;
+    font-family: arial;
     float: right;
+    background-color: rgb(16, 16, 65);
+    color: white;
+    padding-top: 10px;
 }
 
-.grid-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 20px;
-    font-size: 1.2em;
-    width: 20%;
+.card::after {
+    bottom: -9px !important;
+}
+
+.card::before {
+    bottom: -15px;
+}
+
+.title {
+    color: grey;
+    font-size: 18px;
+}
+
+button {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 8px;
+    color: white;
+    background-color: rgb(129, 129, 228);
+    text-align: center;
+    cursor: pointer;
+    width: 80%;
+    font-size: 18px;
+}
+
+a {
+    text-decoration: none;
+    font-size: 22px;
+    color: black;
+}
+
+button:hover,
+a:hover {
+    opacity: 0.7;
+}
+
+.close {
+    float: right;
+    font-weight: bold;
+    padding-right: 10px;
 }
