--- a/src/app/counter/counter.component.css
+++ b/src/app/counter/counter.component.css
@@ -53,3 +53,16 @@ a:hover {
     font-weight: bold;
     padding-right: 10px;
 }
+
+#profileImage {
+    width: 50px;
+    height: 35px;
+    border-radius: 50%;
+    background: white;
+    font-size: 25px;
+    color: rgb(16, 16, 65);
+    text-align: center;
+    font-family: 'Brush Script MT';
+    margin-left: 37%;
+    margin-bottom: 10px;
+}
