--- a/src/app/log-in/log-in.component.html
+++ b/src/app/log-in/log-in.component.html
@@ -28,8 +28,12 @@
                 Enter valid user name.
             </div>
         </div>
-        <div class="input-box">
-            <input type="password" ngModel="Hh@1234*" formControlName="password" placeholder="Enter Your Password" required>
+        <div class="input-box ">
+            <div class="row">
+                <div class="col-md-11"><input [type]="showPassword ? 'text' : 'password'" ngModel="Hh@1234*" formControlName="password" placeholder="Enter Your Password" required></div>
+                <div class="col-md-1"><i (click)="showPassword = !showPassword" class="bi bi-eye-fill" [hidden]="showPassword"></i>
+                    <i class="bi bi-eye-slash-fill" (click)="showPassword = !showPassword" [hidden]="!showPassword"></i></div>
+            </div>
             <div class="underline"></div>
         </div>
         <div *ngIf="loginForm.controls['password'].invalid && loginForm.controls['password'].touched" class="warn">
