22-12-2021,18:35 (Added adress in Signup page)

--- a/src/app/sign-up/sign-up.component.css
+++ b/src/app/sign-up/sign-up.component.css
@@ -1,4 +1,5 @@
-.signUp {
+.signUp,
+.address {
     padding: 5px;
 }
 
@@ -36,4 +37,11 @@
 .bi::before {
     margin-left: -25px;
     color: rgb(16, 16, 65);
+    /*transition: all 0.3s ease;*/
+}
+
+#addressLine1,
+#addressLine2 {
+    width: 95%;
+    /*margin-left: 10px;*/
 }
