--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -95,6 +95,30 @@
 
             </div>
         </div>
+        <div class="signUp row Col-md-12">
+            <div class="col-md-5 ">Address </div>
+            <div class="col-md-1">:</div>
+            <div class="col-md-6 input-box ">
+
+                <div *ngIf="signUpForm.controls['firstName'].invalid && signUpForm.controls['firstName'].touched" class="warn">
+                    <div *ngIf="signUpForm.controls['firstName'].errors?.required">
+                        Enter Address.
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="address Col-md-12">
+            <div class="address"><input id="addressLine1" ngModel="Address Line one" formControlName="addressLine1" placeholder="Address line 1" type="text"></div>
+            <div class="address"><input id="addressLine2" ngModel="address line two" formControlName="addressLine2" placeholder="Address line 2" type="text"></div>
+            <div class="address row mx-0">
+                <div class="col-md-6 address"><input ngModel="city name" formControlName="city" placeholder="City" type="text"></div>
+                <div class="col-md-6 address"><input ngModel="State name" formControlName="state" placeholder="State" type="text"></div>
+            </div>
+            <div class="address row mx-0">
+                <div class="col-md-6 address"><input ngModel="Country" formControlName="country" placeholder="Country" type="text"></div>
+                <div class="col-md-6 address"><input ngModel="Zipcode" formControlName="zipcode" placeholder="zipcode" type="text"></div>
+            </div>
+        </div>
         <div class="login">Already have an account? <a href="/login">Login</a></div>
         <div class="clearfix Col-md-12">
             <!--[disabled]="signUpForm.invalid"-->
