selection color updated(28-12-2021,16:50)

--- a/src/app/log-in/log-in.component.css
+++ b/src/app/log-in/log-in.component.css
@@ -27,7 +27,8 @@ body {
 }
 
 ::selection {
-    background: rgb(162, 162, 231);
+    background: rgb(42, 42, 94);
+    color: white;
 }
 
 .container {
