--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -24,5 +24,5 @@
         <a><i class="fa fa-linkedin"></i></a>
         <a><i class="fa fa-facebook"></i></a>
     </div>
-    <p><button>Edit Profile <i class="bi bi-pencil-square"></i></button></p>
+    <p><button (click)=editProfile()>Edit Profile <i class="bi bi-pencil-square"></i></button></p>
 </div>
