--- a/src/styles.css
+++ b/src/styles.css
@@ -27,3 +27,5 @@ body {
     font-family: Roboto, "Helvetica Neue", sans-serif;
     /*font-family: Copperplate, Papyrus, fantasy;*/
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
