fixed SignUp and EditProfile Implementation

--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -3,7 +3,7 @@
         <div class="signUp row Col-md-12">
             <div class="col-md-5 ">First Name </div>
             <div class="col-md-1">:</div>
-            <div class="col-md-6 input-box "><input ngModel="Hello" formControlName="firstName" type="text">
+            <div class="col-md-6 input-box "><input ngModel={{firstName}} formControlName="firstName" type="text">
                 <div *ngIf="signUpForm.controls['firstName'].invalid && signUpForm.controls['firstName'].touched" class="warn">
                     <div *ngIf="signUpForm.controls['firstName'].errors?.required">
                         Enter First Name.
@@ -14,7 +14,7 @@
         <div class="signUp row Col-md-12">
             <div class="col-md-5 ">Last Name </div>
             <div class="col-md-1">:</div>
-            <div class="col-md-6 input-box "><input ngModel="Hell" formControlName="lastName" type="text">
+            <div class="col-md-6 input-box "><input ngModel={{lastName}} formControlName="lastName" type="text">
                 <div *ngIf="signUpForm.controls['lastName'].invalid && signUpForm.controls['lastName'].touched" class="warn">
                     <div *ngIf="signUpForm.controls['lastName'].errors?.required">
                         Enter Last Name.
@@ -27,7 +27,7 @@
             <div class="col-md-5 ">Role</div>
             <div class="col-md-1">:</div>
             <div class="col-md-6 input-box ">
-                <select formControlName="role">
+                <select ngModel={{role}} formControlName="role">
                     <option value="">---Select Role---</option>
                     <option value="1">Manager</option>
                     <option value="2">User</option>
@@ -48,7 +48,7 @@
             <div class="col-md-1">:</div>
             <div class="col-md-6 input-box ">
                 <div appearance="fill">
-                    <input matInput type="date" formControlName="dateOfBirth">
+                    <input matInput type="date" max={{latest_date}} name="dateOfBirth" formControlName="dateOfBirth">
                 </div>
                 <div *ngIf="signUpForm.controls['dateOfBirth'].invalid && signUpForm.controls['dateOfBirth'].touched" class="warn">
                     <div *ngIf="signUpForm.controls['dateOfBirth'].errors?.required">
@@ -64,7 +64,7 @@
         <div class="signUp row Col-md-12">
             <div class="col-md-5 ">Phone Number </div>
             <div class="col-md-1">:</div>
-            <div class="col-md-6 input-box "><input type="number" ngModel="7894561230" formControlName="phoneNumber">
+            <div class="col-md-6 input-box "><input type="number" ngModel={{phoneNumber}} formControlName="phoneNumber">
                 <div *ngIf="signUpForm.controls['phoneNumber'].invalid && signUpForm.controls['phoneNumber'].touched" class="warn">
                     <div *ngIf="signUpForm.controls['phoneNumber'].errors?.required">
                         Phone number required.
@@ -78,7 +78,7 @@
         <div class="signUp row Col-md-12">
             <div class="col-md-5 ">Mali ID </div>
             <div class="col-md-1">:</div>
-            <div class="col-md-6 input-box "><input ngModel="hello@hel.com" formControlName="mailId" type="text">
+            <div class="col-md-6 input-box "><input name={{name}} ngModel={{mailId}} formControlName="mailId" type="text">
                 <div *ngIf="signUpForm.controls['mailId'].invalid && signUpForm.controls['mailId'].touched" class="warn">
                     <div *ngIf="signUpForm.controls['mailId'].errors?.required">
                         Email required.
@@ -94,7 +94,7 @@
             <div class="col-md-1">:</div>
             <div class="col-md-6 input-box ">
                 <div class="input-group ">
-                    <input ngModel="Hh@1234*" formControlName="password" [type]="showPassword ? 'text' : 'password'">
+                    <input ngModel={{password}} formControlName="password" [type]="showPassword ? 'text' : 'password'">
                     <div class="col-md-1"><i (click)="showPassword = !showPassword" class="bi bi-eye-fill" [hidden]="showPassword"></i>
                         <i class="bi bi-eye-slash-fill" (click)="showPassword = !showPassword" [hidden]="!showPassword"></i></div>
                 </div>
@@ -113,7 +113,7 @@
             <div class="col-md-1">:</div>
             <div class="col-md-6 input-box ">
                 <div class="input-group ">
-                    <input ngModel="Hh@1234*" formControlName="confirmPassword" [type]="showConfPassword ? 'text' : 'password'">
+                    <input ngModel={{confirmPassword}} formControlName="confirmPassword" [type]="showConfPassword ? 'text' : 'password'">
                     <div class="col-md-1"><i (click)="showConfPassword = !showConfPassword" class="bi bi-eye-fill" [hidden]="showConfPassword"></i>
                         <i class="bi bi-eye-slash-fill" (click)="showConfPassword = !showConfPassword" [hidden]="!showConfPassword"></i></div>
                 </div>
