--- a/src/app/sign-up/sign-up.component.css
+++ b/src/app/sign-up/sign-up.component.css
@@ -58,3 +58,10 @@ input {
     height: 28px;
     text-align: center;
 }
+
+
+/*** To disable taking input form field ***/
+
+input[name=mailId] {
+    pointer-events: none;
+}
