--- a/src/app/edit-profile/edit-profile.component.html
+++ b/src/app/edit-profile/edit-profile.component.html
@@ -1,2 +1,171 @@
-<!-- <p>edit-profile works!</p> -->
-<app-sign-up></app-sign-up>
+<form [formGroup]="signUpForm" class="signUpOut">
+    <div class="container">
+        <div class="signUp row Col-md-12">
+            <div class="col-md-5 ">First Name </div>
+            <div class="col-md-1">:</div>
+            <div class="col-md-6 input-box "><input ngModel="firstName" formControlName="firstName" type="text">
+                <div *ngIf="signUpForm.controls['firstName'].invalid && signUpForm.controls['firstName'].touched" class="warn">
+                    <div *ngIf="signUpForm.controls['firstName'].errors?.required">
+                        Enter First Name.
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="signUp row Col-md-12">
+            <div class="col-md-5 ">Last Name </div>
+            <div class="col-md-1">:</div>
+            <div class="col-md-6 input-box "><input ngModel={{lastName}} formControlName="lastName" type="text">
+                <div *ngIf="signUpForm.controls['lastName'].invalid && signUpForm.controls['lastName'].touched" class="warn">
+                    <div *ngIf="signUpForm.controls['lastName'].errors?.required">
+                        Enter Last Name.
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="signUp row Col-md-12">
+            <div class="col-md-5 ">Role</div>
+            <div class="col-md-1">:</div>
+            <div class="col-md-6 input-box ">
+                <select ngModel={{role}} formControlName="role">
+                    <option value="">---Select none---</option>
+                    <option value="1">Manager</option>
+                    <option value="2">User</option>
+                </select>
+                <div *ngIf="signUpForm.controls['role'].invalid && signUpForm.controls['role'].touched" class="warn">
+                    <div *ngIf="signUpForm.controls['role'].errors?.required || signUpForm.controls['role'].errors?.pattern">
+                        Role required.
+                    </div>
+                    <!-- <div *ngIf="signUpForm.controls['role'].errors?.pattern">
+                        Select correct Role.
+                    </div> -->
+                    <!-- <div *ngIf="signUpForm.controls['role'].errors?.pattern">
+                        Enter valid Email.
+                    </div> -->
+                </div>
+            </div>
+        </div>
+
+        <div class="signUp row Col-md-12">
+            <div class="col-md-5 ">Date Of Birth</div>
+            <div class="col-md-1">:</div>
+            <div class="col-md-6 input-box ">
+                <div appearance="fill">
+                    <input matInput type="date" max={{latest_date}} name="dateOfBirth" formControlName="dateOfBirth">
+                </div>
+                <div *ngIf="signUpForm.controls['dateOfBirth'].invalid && signUpForm.controls['dateOfBirth'].touched" class="warn">
+                    <div *ngIf="signUpForm.controls['dateOfBirth'].errors?.required">
+                        Date required.
+                    </div>
+                    <!-- <div *ngIf="signUpForm.controls['role'].errors?.pattern">
+                        Enter valid Email.
+                    </div> -->
+                </div>
+            </div>
+        </div>
+
+        <div class="signUp row Col-md-12">
+            <div class="col-md-5 ">Phone Number </div>
+            <div class="col-md-1">:</div>
+            <div class="col-md-6 input-box "><input type="number" ngModel={{phoneNumber}} formControlName="phoneNumber">
+                <div *ngIf="signUpForm.controls['phoneNumber'].invalid && signUpForm.controls['phoneNumber'].touched" class="warn">
+                    <div *ngIf="signUpForm.controls['phoneNumber'].errors?.required">
+                        Phone number required.
+                    </div>
+                    <div *ngIf="signUpForm.controls['phoneNumber'].errors?.pattern">
+                        Enter valid Phone Number.
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="signUp row Col-md-12">
+            <div class="col-md-5 ">Mali ID </div>
+            <div class="col-md-1">:</div>
+            <div class="col-md-6 input-box "><input name={{name}} ngModel={{mailId}} formControlName="mailId" type="text">
+                <div *ngIf="signUpForm.controls['mailId'].invalid && signUpForm.controls['mailId'].touched" class="warn">
+                    <div *ngIf="signUpForm.controls['mailId'].errors?.required">
+                        Email required.
+                    </div>
+                    <div *ngIf="signUpForm.controls['mailId'].errors?.pattern">
+                        Enter valid Email.
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="signUp row Col-md-12">
+            <div class="col-md-5 ">Password </div>
+            <div class="col-md-1">:</div>
+            <div class="col-md-6 input-box ">
+                <div class="input-group ">
+                    <input ngModel={{password}} formControlName="password" [type]="showPassword ? 'text' : 'password'">
+                    <div class="col-md-1"><i (click)="showPassword = !showPassword" class="bi bi-eye-fill" [hidden]="showPassword"></i>
+                        <i class="bi bi-eye-slash-fill" (click)="showPassword = !showPassword" [hidden]="!showPassword"></i></div>
+                </div>
+                <div *ngIf="signUpForm.controls['password'].invalid && signUpForm.controls['password'].touched" class="warn">
+                    <div *ngIf="signUpForm.controls['password'].errors?.required">
+                        Password is required.
+                    </div>
+                    <div *ngIf="signUpForm.controls['password'].errors?.pattern">
+                        Password is a combination of uppercase, lowercase and special chars.
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="signUp row Col-md-12">
+            <div class="col-md-5 ">Confirm Password </div>
+            <div class="col-md-1">:</div>
+            <div class="col-md-6 input-box ">
+                <div class="input-group ">
+                    <input ngModel={{confirmPassword}} formControlName="confirmPassword" [type]="showConfPassword ? 'text' : 'password'">
+                    <div class="col-md-1"><i (click)="showConfPassword = !showConfPassword" class="bi bi-eye-fill" [hidden]="showConfPassword"></i>
+                        <i class="bi bi-eye-slash-fill" (click)="showConfPassword = !showConfPassword" [hidden]="!showConfPassword"></i></div>
+                </div>
+                <div *ngIf="signUpForm.controls['confirmPassword'].invalid && signUpForm.controls['confirmPassword'].touched" class="warn">
+                    <!-- <div *ngIf="signUpForm.controls['confirmPassword'].errors?.required">
+                    Password is required.
+                  </div>
+                  <div *ngIf = "signUpForm.controls['confirmPassword'].errors?.CustomValidators" class="warn">
+                    Password not matched
+                  </div> -->
+                    Password not matched
+                </div>
+                <!-- <div *ngIf="signUpForm.controls['confirmPassword'].errors?.required" class="warn">
+          <div *ngIf="signUpForm.controls['confirmPassword'].touched">
+            password is Required
+          </div>
+        </div> -->
+
+            </div>
+        </div>
+        <div class="signUp row Col-md-12">
+            <div class="col-md-5 ">Address </div>
+            <div class="col-md-1">:</div>
+            <div class="col-md-6 input-box ">
+
+                <div *ngIf="signUpForm.controls['firstName'].invalid && signUpForm.controls['firstName'].touched" class="warn">
+                    <div *ngIf="signUpForm.controls['firstName'].errors?.required">
+                        Enter Address.
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="address Col-md-12">
+            <div class="address"><input id="addressLine1" ngModel="Address Line one" formControlName="addressLine1" placeholder="Address line 1" type="text"></div>
+            <div class="address"><input id="addressLine2" ngModel="address line two" formControlName="addressLine2" placeholder="Address line 2" type="text"></div>
+            <div class="row mx-0">
+                <div class="col-md-6 address"><input ngModel="city name" formControlName="city" placeholder="City" type="text"></div>
+                <div class="col-md-6 address"><input ngModel="State name" formControlName="state" placeholder="State" type="text"></div>
+            </div>
+            <div class="row mx-0">
+                <div class="col-md-6 address"><input ngModel="Country" formControlName="country" placeholder="Country" type="text"></div>
+                <div class="col-md-6 address"><input ngModel="Zipcode" formControlName="zipcode" placeholder="zipcode" type="text"></div>
+            </div>
+        </div>
+        <!-- <div class="login">Already have an account? <a href="/login">Login</a></div> -->
+        <div class="clearfix Col-md-12">
+            <!--[disabled]="signUpForm.invalid"-->
+            <button class="col-md-3 btn btn-light" type="reset" [routerLink]="['/']">Cancel</button>
+            <button class="col-md-3 btn btn-primary " type="submit" (click)="onSubmit()">Update</button>
+        </div>
+    </div>
+</form>
