--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -3,7 +3,7 @@
         <div class="signUp row Col-md-12">
             <div class="col-md-5 ">First Name </div>
             <div class="col-md-1">:</div>
-            <div class="col-md-6 input-box "><input [(ngModel)]="firstName" formControlName="firstName" type="text">
+            <div class="col-md-6 input-box "><input ngModel={{firstName}} formControlName="firstName" type="text">
                 <div *ngIf="signUpForm.controls['firstName'].invalid && signUpForm.controls['firstName'].touched" class="warn">
                     <div *ngIf="signUpForm.controls['firstName'].errors?.required">
                         Enter First Name.
@@ -150,8 +150,8 @@
             </div>
         </div>
         <div class="address Col-md-12">
-            <div class="address"><input id="addressLine1" ngModel="Address Line one" formControlName="addressLine1" placeholder="Address line 1" type="text"></div>
-            <div class="address"><input id="addressLine2" ngModel="address line two" formControlName="addressLine2" placeholder="Address line 2" type="text"></div>
+            <div class="address"><input id="addressLine1" ngModel="Address Line 1" formControlName="addressLine1" placeholder="Address line 1" type="text"></div>
+            <div class="address"><input id="addressLine2" ngModel="address line 2" formControlName="addressLine2" placeholder="Address line 2" type="text"></div>
             <div class="row mx-0">
                 <div class="col-md-6 address"><input ngModel="city name" formControlName="city" placeholder="City" type="text"></div>
                 <div class="col-md-6 address"><input ngModel="State name" formControlName="state" placeholder="State" type="text"></div>
